<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text ="@string/sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_toEndOf="@id/signup"
        android:layout_toRightOf="@id/signup"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/back"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_toStartOf="@id/signup"
        android:layout_toLeftOf="@id/signup"
        android:onClick="goBack"
        android:text="@string/back" />


    <EditText
        android:id="@+id/first"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="First Name"
        android:hint="@string/first_name" />

    <EditText
        android:layout_below="@id/first"
        android:id="@+id/last"
        android:hint = "@string/last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Last Name"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_below="@id/last"
        android:id="@+id/address"
        android:hint = "@string/address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Address"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_below="@id/address"
        android:id="@+id/city"
        android:hint = "@string/city"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/city"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_below="@id/state"
        android:id="@+id/zip"
        android:hint = "@string/zip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/zip"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_below="@id/city"
        android:id="@+id/state"
        android:hint = "@string/state"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/state"
        android:layout_centerHorizontal="true"
        />



    <EditText
        android:layout_below="@id/zip"
        android:id="@+id/username"
        android:hint = "@string/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Create Username"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Create Password"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/button_id"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/createAccount"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:onClick = "doSignUP"/>
</RelativeLayout>