<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="239dp"
        android:layout_height="185dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_toStartOf="@id/logo"
        android:layout_toLeftOf="@id/logo"
        android:onClick="goBack"
        android:text="@string/back" />

    <EditText
        android:layout_below="@id/logo"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_below="@id/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_id"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Login"
        android:layout_height="100dp"
        android:layout_width="200dp"
        android:onClick = "doLogin"/>

</RelativeLayout>