<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/profile"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="68dp"
        android:layout_height="84dp"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_toEndOf="@id/profile"
        android:layout_toRightOf="@id/profile"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_toStartOf="@id/profile"
        android:layout_toLeftOf="@id/profile"
        android:onClick="goBack"
        android:text="@string/back" />

    <TextView
        android:id="@+id/prifileInfo"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/profileInfo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/first"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/prifileInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/last"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/first"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/last"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/city"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/state"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/city"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:id="@+id/zip"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/editProfile"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/zip"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/edit"
        android:layout_height="100dp"
        android:layout_width="200dp"
        android:onClick = "editProfile"/>

</RelativeLayout>